Improved ui and fixed dark mode

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,10 +1,9 @@
 @import "tailwindcss";
 @import "tailwindcss-primeui";
 
-body {
-    background-color: #f4f4f4;
+@theme {
+    --color-gray-800: var(--color-zinc-800);
 }
-
 
 /*
 :root {
